# pgw_courseWork

./: .gitignore  CMakeLists.txt  README.markdown  client_config.json  config.json
common/include/: logger.hpp
common/src/: logger.cpp
pgw_client/: CMakeLists.txt
pgw_client/include/: client_config.hpp  udp_client.hpp
pgw_client/src/: client_config.cpp  main.cpp  udp_client.cpp
pgw_server/: CMakeLists.txt
pgw_server/include/: cdr_logger.hpp  config.hpp  http_server.hpp  interfaces.hpp  session_manager.hpp  udp_server.hpp
pgw_server/src/: cdr_logger.cpp  config.cpp  http_server.cpp  main.cpp  session_manager.cpp  udp_server.cpp
scripts/: test_blacklist.sh  test_functional.sh  test_load.sh
tests/: CMakeLists.txt  test_cdr_logger.cpp  test_config.cpp  test_http_server.cpp  test_session_manager.cpp  test_udp_client.cpp  test_udp_server.cpp
